--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<title>API</title>
+	
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<style type="text/css">
 		* {
