--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 	<title>API</title>
 	
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+	<link rel="icon" href="./favicon.ico">
 	<style type="text/css">
 		* {
 			margin: 0;
@@ -173,6 +174,7 @@
 	</style>
 </head>
 <body>
+	
 	<div id="app"></div>
 	<template id="main">
 		<div id="app">
@@ -220,19 +222,20 @@
 						    :label="item.name | handleTabTitle"
 						    :name="`${i}`">
 							  <div style="display: flex">
-								  <el-input v-model="item.url"
-								  	placeholder="请输入接口地址" 
-								  	clearable 
-								  	style="flex:1">
-								    <el-select v-model="item.method"
-								    	slot="prepend" 
-								    	placeholder="请选择" 
-								    	style="width:130px"
-								    	@change="changeMethod($event, item)">
-								      <el-option label="GET" value="get"></el-option>
-								      <el-option label="POST" value="post"></el-option>
-								    </el-select>
-								  </el-input>
+								  <div style="flex:1">
+									  <el-input v-model="item.url"
+									  	placeholder="请输入接口地址" 
+									  	clearable>
+									    <el-select v-model="item.method"
+									    	slot="prepend" 
+									    	placeholder="请选择" 
+									    	style="width:130px"
+									    	@change="changeMethod($event, item)">
+									      <el-option label="GET" value="get"></el-option>
+									      <el-option label="POST" value="post"></el-option>
+									    </el-select>
+									  </el-input>
+									</div>
 								  <el-button-group style="margin-left: 12px">
 								  	<el-button type="primary" @click="submitRequest(item)">发送</el-button>
 								  	<el-button type="success">保存</el-button>
@@ -352,7 +355,7 @@
 									  </el-tabs>
 								  </el-collapse-item>
 								  <el-collapse-item title="Response" name="2">
-									  <div style="padding:10px;max-height:600px;min-height:120px;overflow-y:auto;border:1px solid #E4E7ED"
+									  <div style="padding:10px;min-height:120px;border:1px solid #E4E7ED"
 											v-loading="item.loading" element-loading-text="拼命请求中...">
 											<json-view v-show='item.jsonData' :data="item.jsonData"></json-view>
 										</div>
@@ -810,12 +813,12 @@
 						item[key].splice(i, 1)
 					},
 
-					// 存储新请求到本地
+					// 存储/更新请求
 					cacheRequest(item) {
-						let isNewApi = !this.requestHistory.some(it => it.url === item.url)
-						if(isNewApi) {
-							this.requestHistory.push(cloneData(item))
-						}
+						let i = this.requestHistory.findIndex(it => it.url === item.url)
+						i === -1 
+							? this.requestHistory.push(cloneData(item))
+							: this.requestHistory.splice(i, 1, cloneData(item))
 						setStorage('RH', this.requestHistory)
 					},
 
@@ -830,7 +833,7 @@
 						let options = { url, method, headers }
 						options[method === 'get' ? 'params' : 'data'] = params
 						item.loading = true
-						axios.post('http://zengyuanqiu.oicp.io:14017/proxy', options)
+						axios.post('http://zengyuanqiu.xicp.io/proxy', options)
 							.then(res => {
 								item.jsonData = res.data
 								item.loading = false
